--- a/Homework/Conversions.html
+++ b/Homework/Conversions.html
@@ -36,23 +36,31 @@
 				document.write(wholeArr[n]);	// Writes the Whole binary number
 			}
 			
-		// Convert and display right side of decimal digits.
+		// Convert and display the decimal and digits to its right.
 			var fracLen = (origiNum + '').replace('.','').length;	// Returns the length of a float.
 			var intLen = ~~(Math.log(origiNum) / Math.LN10 + 1);	// Returns the length of an integer.
 			var deciLen = fracLen - intLen;							// Returns the length of fractional.
 			var numSplit = 0; //(fracVal + "").split(".");			// Splits a float at the decimal.
 			var leadSlice = 0; // numSplit.slice(0,1);				// Return the digit before the decimal.
-			var numSlice = 0; // numSplit.slice(1,deciLen);
+			var numSlice = 0; // numSplit.slice(1,deciLen);			// Return the digits after the decimal.
+			var decimal = ".";
 			
 			for(var j = 0; j < deciLen; j++){
 				fracVal = deciNum * 2;
 				numSplit = (fracVal + "").split(".");
 				leadSlice = numSplit.slice(0,1);
-				numSlice = numSplit.slice(1,deciLen);
-				
+				numSlice = numSplit.slice(1,deciLen - j);
+				deciArr[j] = leadSlice;
+				deciNum = decimal.concat(numSlice);
+				deciNum = parseFloat(deciNum);
 			}
 			
+			document.write(decimal);		// Writes the decimal point.
+			deciArrLen = deciArr.length;	// Calculates the length of the Fractional Number Array.
 			
+			for(var n = 0; n < deciArrLen; n++){
+				document.write(deciArr[n]);	// Writes the binary to the right of decimal.
+			}
 			
 		</script>
     </body>
